# examen-dwes-daniel-ponz

./: Enunciado-Examen.md  LICENSE  README.md  pyproject.toml
apuntes/: AnexoI.md  AnexoII.md  AnexoIII.md  AnexoIV.md  AnexoV.md
examen_febrero2026/: manage.py
examen_febrero2026/examen_febrero2026/: asgi.py  settings.py  urls.py  wsgi.py
examen_febrero2026/publicaciones/: forms.py  models.py  urls.py  views.py
examen_febrero2026/publicaciones/migrations/: 0001_initial.py
examen_febrero2026/publicaciones/templates/publicaciones/: autor_form.html  autor_list.html  base.html  base_form.html
examen_febrero2026/socios/: forms.py  models.py  urls.py  views.py
examen_febrero2026/socios/migrations/: 0001_initial.py
examen_febrero2026/socios/templates/: disco_form.html  disco_list.html
